Stop text from wrapping to next line

--- a/modules/range/_mixins.scss
+++ b/modules/range/_mixins.scss
@@ -186,6 +186,7 @@
 	justify-content: center;
 	width: 100%;
 	color: var(--secondary, #{theme.prop('secondary')});
+	white-space: nowrap;
 }
 
 @mixin leading() {
